# aws-lab-autopilot

./: .gitignore  DESIGN.md  Dockerfile  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.aws-sam/: build.toml
infra/: app.py  cdk.json  stack.py
src/agents/execute/: agent.py  safety_guard.py  tools.py
src/agents/publish/: agent.py  tools.py
src/agents/research/: agent.py  tools.py
src/api/: handler.py  models.py
src/aws/: iam_manager.py  knowledge.py  resource_tracker.py
src/aws_handson_workflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/orchestrator/: callback.py  increment_rework.py  sfn_definition.json  sqs_handler.py
templates/: README.md  article.md
tests/: test_execute_agent.py  test_publish_agent.py  test_research_agent.py  test_safety_guard.py
