[project]
name = "aws-handson-workflow"
version = "0.1.0"
description = "Automated AWS Hands-on Lab article production pipeline"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "pydantic",
    "strands-agents",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "moto",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
